# demo-plateforme

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
client/: create.http  read.http  users.http
server/: main.py  settings.py  setup.py
